--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cash-dom": "^1.3.7",
     "codemirror": "^5.49.2",
     "codemirror-formatting": "^1.0.0",
+    "grapesjs-blocks-basic": "^0.1.8",
     "keymaster": "^1.6.2",
     "promise-polyfill": "^8.1.3",
     "spectrum-colorpicker": "^1.8.0",
